# graphics21-re

./: .gitattributes  .gitignore  README.md  assn1.txt  assn2.txt  assn3.txt  assn4.txt  assn5.txt  assn6.txt  grade1-435.txt  grade1a.txt  grade2-435.txt  grade3-435.txt  grade4-435.txt  grade6-435.txt
GLapp/: CMakeLists.txt  README.txt
GLapp/cmake/: FindGLEW.cmake
GLapp/data/: object.frag  object.vert  paving-props.ppm  pebbles.ppm  rocks-normal.ppm  rocks-props.ppm  water.ppm
GLapp/src/: GLapp.cpp  GLapp.hpp  Island.cpp  Island.hpp  Object.cpp  Object.hpp  Plane.cpp  Plane.hpp  Player.cpp  Player.hpp  Shader.hpp  Sphere.cpp  Sphere.hpp  config.h.in
final/: grade.txt
island/: README.txt
island/cmake/: FindGLEW.cmake
island/data/: Textures.txt  blue.ppm  paving-color.ppm  paving-normal.ppm  rocks-color.ppm  rocks-props.ppm
island/src/: GLapp.cpp  GLapp.hpp  Island.cpp  Island.hpp  Object.cpp  Object.hpp  Plane.hpp  Shader.cpp  Sphere.hpp
midterm/: midterm-grade.txt
raysample/: CMakeLists.txt  Intersection.cpp  Intersection.hpp  Object.cpp  Object.hpp  ObjectList.cpp  ObjectList.hpp  Polygon.cpp  Polygon.hpp  Ray.hpp  Sphere.cpp  Sphere.hpp  Vec3.hpp  World.cpp  World.hpp  trace.cpp
trace/: assn6-diff.ppm  trace.cpp
